--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./assets/tailwind.pcss">
+  <title>rayriffy · The front frontier of rayriffy.com</title>
+  <meta name="theme-color" content="#1a202c">
+  <meta name="description" content="I am half full-stack web developer...half arcade player">
+  <link rel="stylesheet" media="all" href="./assets/tailwind.pcss">
+  <link rel="shortcut icon" href="./assets/favicon.ico">
+  <link rel="apple-touch-icon" href="./assets/favicon.ico">
 </head>
 <body>
   <main class="container mx-auto">
