chore: staged changes

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="container mx-auto px-4 dark:text-white">
     <div class="text-4xl font-bold pt-24">Phumrapee Limpianchop</div>
-    <div class="mt-4 bg-white rounded-lg overflow-hidden hidden" id="encore-1"></div>
+    <div class="mt-4 bg-white dark:bg-gray-800 rounded-lg overflow-hidden hidden" id="encore-1"></div>
     <div class="pt-4 flex flex-wrap">
       <div class="w-full md:w-1/2 py-4 md:pr-4">
         <section class="bg-white dark:bg-gray-800 rounded-lg p-6">
