--- a/src/index.html
+++ b/src/index.html
@@ -6,38 +6,13 @@
   <title>rayriffy · The front frontier of rayriffy.com</title>
   <meta name="theme-color" content="#1a202c">
   <meta name="description" content="I am half full-stack web developer...half arcade player">
-  <link rel="stylesheet" media="all" href="./assets/tailwind.pcss">
   <link rel="shortcut icon" href="./assets/favicon.ico">
   <link rel="apple-touch-icon" href="./assets/favicon.ico">
 </head>
 <body>
   <main class="container mx-auto px-4 dark:text-white">
-    <div class="text-4xl font-bold pt-24">Phumrapee Limpianchop</div>
-    <div class="mt-4 bg-white dark:bg-gray-800 rounded-lg overflow-hidden hidden" id="encore-1"></div>
-    <div class="pt-4 flex flex-wrap">
-      <div class="w-full md:w-1/2 py-4 md:pr-4">
-        <section class="bg-white dark:bg-gray-800 rounded-lg p-6">
-          <div class="text-2xl font-semibold pb-2 uppercase">Links</div>
-          <div id="link-content">
-            Loading...
-          </div>
-        </section>
-        <section class="mt-8 bg-white dark:bg-gray-800 rounded-lg p-6">
-          <div class="text-2xl font-semibold pb-2 uppercase">Socials</div>
-          <div id="social-content">
-            Loading...
-          </div>
-        </section>
-      </div>
-      <div class="w-full md:w-1/2 py-4 md:pl-4">
-        <section class="bg-white dark:bg-gray-800 rounded-lg p-6">
-          <div class="text-2xl font-semibold pb-2 uppercase">Blogs</div>
-          <div id="blog-content">
-            Loading...
-          </div>
-        </section>
-      </div>
-    </div>
+    <div class="text-5xl font-bold pt-24">Phumrapee Limpianchop</div>
+    <div id="app"></div>
   </main>
   <footer class="container mx-auto py-24 flex text-gray-700 px-4 dark:text-white">
     <div class="font-semibold">© 2020 Phumrapee Limpianchop</div>
@@ -46,8 +21,9 @@
       <a class="hover:underline" href="https://github.com/rayriffy/rayriffy-front-next-chapter-2" target="_blank" rel="noopener">Source</a>
     </div>
   </footer>
-  <script src="./scripts/main.ts" async></script>
+  <!-- <script src="./scripts/main.ts" async></script> -->
   <script src="./scripts/encore.ts" async></script>
+  <script src="./scripts/app.ts" async></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
