--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <title>rayriffy · The front frontier of rayriffy.com</title>
   <meta name="theme-color" content="#1a202c">
   <meta name="description" content="I am half full-stack web developer...half arcade player">
-  <link rel="shortcut icon" href="./assets/favicon.ico">
-  <link rel="apple-touch-icon" href="./assets/favicon.ico">
+  <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="apple-touch-icon" href="<%= BASE_URL %>favicon.ico">
 </head>
 <body>
   <main class="container mx-auto px-4 dark:text-white">
@@ -21,16 +21,6 @@
       <a class="hover:underline" href="https://github.com/rayriffy/rayriffy-front-next-chapter-2" target="_blank" rel="noopener">Source</a>
     </div>
   </footer>
-  <!-- <script src="./scripts/main.ts" async></script> -->
-  <script src="./scripts/encore.ts" async></script>
-  <script src="./scripts/app.ts" async></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        const path = '/sw.js'
-        navigator.serviceWorker.register(path)
-      })
-    }
-  </script>
+  <!-- built files will be auto injected -->
 </body>
 </html>
