--- a/src/index.html
+++ b/src/index.html
@@ -11,44 +11,94 @@
   <link rel="apple-touch-icon" href="./assets/favicon.ico">
 </head>
 <body>
-  <main class="container mx-auto px-4 dark:text-white">
-    <div class="text-5xl font-bold pt-24">Phumrapee Limpianchop</div>
-    <div class="mt-4 bg-white dark:bg-gray-800 rounded-lg overflow-hidden hidden" id="encore-1"></div>
-    <div class="pt-4 flex flex-wrap">
-      <div class="w-full md:w-1/2 py-4 md:pr-4">
-        <section class="bg-white dark:bg-gray-800 rounded-lg p-6">
-          <div class="text-2xl font-semibold pb-2 uppercase">Links</div>
-          <div id="app-links"></div>
-        </section>
-        <section class="mt-8 bg-white dark:bg-gray-800 rounded-lg p-6">
-          <div class="text-2xl font-semibold pb-2 uppercase">Socials</div>
-          <div id="app-socials"></div>
-        </section>
+  <main class="text-gray-700 dark:text-gray-500 body-font">
+    <section class="container mx-auto px-4">
+      <div class="mt-8 bg-white dark:bg-gray-800 rounded-lg overflow-hidden hidden" id="encore-1"></div>
+    </section>
+    <section class="h-screen flex items-center">
+      <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+        <img class="lg:w-1/6 md:w-2/6 w-3/6 mb-10 rounded" alt="R" src="./assets/logo.svg">
+        <div class="text-center lg:w-2/3 w-full">
+          <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900 dark:text-white">Phumrapee Limpianchop</h1>
+          <p class="mb-8 leading-relaxed">Welcome to the front frontier of my domain, rayriffy.com!</p>
+          <div class="flex justify-center">
+            <button id="button-about" class="inline-flex text-white bg-brand border-0 py-2 px-6 focus:outline-none hover:bg-brand-600 rounded text-lg">About me</button>
+            <button id="button-more" class="ml-4 inline-flex text-gray-700 dark:text-gray-400 bg-gray-200 dark:bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 dark:hover:bg-gray-700 rounded text-lg">See more</button>
+          </div>
+        </div>
       </div>
-      <div class="w-full md:w-1/2 py-4 md:pl-4">
-        <section class="bg-white dark:bg-gray-800 rounded-lg p-6">
-          <div class="text-2xl font-semibold pb-2 uppercase">Blogs</div>
-          <div id="app-blogs"></div>
-        </section>
+    </section>
+    <section id="section-blog">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-wrap w-full mb-20">
+          <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900 dark:text-white">Blogs</h1>
+            <div class="h-1 w-20 bg-brand rounded"></div>
+          </div>
+          <p class="lg:w-1/2 w-full leading-relaxed text-base">I have my own personal blog at <b>Riffy Blog</b>. Here're my latest published articles.</p>
+        </div>
+        <div class="flex flex-wrap items-center justify-center -m-4" id="article-blogs">
+          <article class="xl:w-1/4 md:w-1/2 p-4">
+            <div class="bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 p-6 rounded-lg">
+              <video
+                src="https://media.tenor.com/videos/b654a445f93ec9ec720811bf838641ef/mp4"
+                loop
+                autoPlay
+                className="h-40 rounded w-full object-cover object-center"
+              ></video>
+              <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font mt-6">PLEASE WAIT</h3>
+              <h2 class="text-lg text-gray-900 dark:text-white font-medium title-font mb-2">Fetching data from server</h2>
+              <p class="leading-relaxed text-base">This should take only a few seconds...</p>
+            </div>
+          </article>
+        </div>
+        <div class="container px-5 py-16 mx-auto">
+          <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
+            <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900 dark:text-white">More blogs about technology, music, games, and lifestyle are more to come!</h1>
+            <a href="https://blog.rayriffy.com" class="flex-shrink-0" rel="noopener noreferrer" target="_blank">
+              <button class="text-white bg-brand border-0 py-2 px-8 focus:outline-none hover:bg-brand-600 rounded text-lg mt-10 sm:mt-0">See more</button>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
+    </section>
+    <footer>
+      <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+        <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+          <img src="./assets/logo.svg" class="w-10 h-10 p-2">
+        </a>
+        <p class="text-sm text-gray-500 dark:text-gray-600 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 dark:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2020 Phumrapee Limpianchop —
+          <a href="https://twitter.com/rayriffy" class="text-gray-600 dark:text-gray-500 ml-1" rel="noopener noreferrer" target="_blank">@rayriffy</a>
+        </p>
+        <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+          <a href="https://facebook.com/rayriffy" class="text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+            </svg>
+          </a>
+          <a href="https://twitter.com/rayriffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+            </svg>
+          </a>
+          <a href="https://instagram.com/r4yr1ffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+              <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+              <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+            </svg>
+          </a>
+          <a href="https://www.linkedin.com/in/rayriffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+              <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+              <circle cx="4" cy="4" r="2" stroke="none"></circle>
+            </svg>
+          </a>
+        </span>
+      </div>
+    </footer>
   </main>
-  <footer class="container mx-auto py-24 flex text-gray-700 px-4 dark:text-white">
-    <div class="font-semibold">© 2020 Phumrapee Limpianchop</div>
-    <div class="mx-auto"></div>
-    <div class="px-2">
-      <a class="hover:underline" href="https://github.com/rayriffy/rayriffy-front-next-chapter-2" target="_blank" rel="noopener">Source</a>
-    </div>
-  </footer>
-  <script src="./scripts/app.ts" async></script>
+  <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js" async></script>
+  <script src="./scripts/main.ts" async></script>
   <script src="./scripts/encore.ts" async></script>
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        const path = '/sw.js'
-        navigator.serviceWorker.register(path)
-      })
-    }
-  </script>
 </body>
 </html>
