--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
           <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900 dark:text-white">Phumrapee Limpianchop</h1>
           <p class="mb-8 leading-relaxed">Welcome to the front frontier of my domain, rayriffy.com!</p>
           <div class="flex justify-center">
-            <button id="button-about" class="inline-flex text-white bg-brand border-0 py-2 px-6 focus:outline-none hover:bg-brand-600 rounded text-lg">About me</button>
+            <a href="https://facebook.com/rayriffy" rel="noopener noreferrer" target="_blank">
+              <button id="button-about" class="inline-flex text-white bg-brand border-0 py-2 px-6 focus:outline-none hover:bg-brand-600 rounded text-lg">About me</button>
+            </a>
             <button id="button-more" class="ml-4 inline-flex text-gray-700 dark:text-gray-400 bg-gray-200 dark:bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-300 dark:hover:bg-gray-700 rounded text-lg">See more</button>
           </div>
         </div>
