--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <div class="container px-5 py-16 mx-auto">
           <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
             <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900 dark:text-white">More blogs about technology, music, games, and lifestyle are more to come!</h1>
-            <a href="https://blog.rayriffy.com" class="flex-shrink-0" rel="noopener noreferrer" target="_blank">
+            <a aria-label="Riffy Blog" href="https://blog.rayriffy.com" class="flex-shrink-0" rel="noopener noreferrer" target="_blank">
               <button class="text-white bg-brand border-0 py-2 px-8 focus:outline-none hover:bg-brand-600 rounded text-lg mt-10 sm:mt-0">See more</button>
             </a>
           </div>
@@ -66,33 +66,27 @@
     </section>
     <footer>
       <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-        <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-          <img src="./assets/logo.svg" class="w-10 h-10 p-2">
-        </a>
+        <div class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+          <img src="./assets/logo.svg" alt="R" class="w-10 h-10 p-2">
+        </div>
         <p class="text-sm text-gray-500 dark:text-gray-600 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 dark:border-gray-800 sm:py-2 sm:mt-0 mt-4">© 2020 Phumrapee Limpianchop —
           <a href="https://twitter.com/rayriffy" class="text-gray-600 dark:text-gray-500 ml-1" rel="noopener noreferrer" target="_blank">@rayriffy</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-          <a href="https://facebook.com/rayriffy" class="text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+          <a aria-label="Facebook" href="https://facebook.com/rayriffy" class="text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
             <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
               <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
             </svg>
           </a>
-          <a href="https://twitter.com/rayriffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+          <a aria-label="Twitter" href="https://twitter.com/rayriffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
             <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
               <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
             </svg>
           </a>
-          <a href="https://instagram.com/r4yr1ffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
+          <a aria-label="Instagram" href="https://instagram.com/r4yr1ffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
               <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-            </svg>
-          </a>
-          <a href="https://www.linkedin.com/in/rayriffy" class="ml-3 text-gray-500 dark:text-gray-600 hover:text-gray-600 dark:hover:text-gray-500" rel="noopener noreferrer" target="_blank">
-            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-              <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-              <circle cx="4" cy="4" r="2" stroke="none"></circle>
             </svg>
           </a>
         </span>
