--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
             <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900 dark:text-white">More blogs about technology, music, games, and lifestyle are more to come!</h1>
             <a aria-label="Riffy Blog" href="https://blog.rayriffy.com" class="flex-shrink-0" rel="noopener noreferrer" target="_blank">
-              <button class="text-white bg-brand border-0 py-2 px-8 focus:outline-none hover:bg-brand-600 rounded text-lg mt-10 sm:mt-0">See more</button>
+              <button class="text-white bg-brand border-0 py-2 px-8 focus:outline-none hover:bg-brand-600 rounded text-lg mt-10 sm:mt-0">Riffy Blog</button>
             </a>
           </div>
         </div>
