--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
                 src="https://media.tenor.com/videos/b654a445f93ec9ec720811bf838641ef/mp4"
                 loop
                 autoPlay
+                muted
                 className="h-40 rounded w-full object-cover object-center"
               ></video>
               <h3 class="tracking-widest text-indigo-500 text-xs font-medium title-font mt-6">PLEASE WAIT</h3>
